--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "homepage": "https://github.com/fedeghe/malta-es-uglify#readme",
     "main": "index.js",
     "dependencies": {
-        "malta": ">=3.8.14",
+        "malta": "^4.0.4",
         "uglify-es": "^3.3.9"
     }
 }
